--- a/app/src/main/assets/html/demo.html
+++ b/app/src/main/assets/html/demo.html
@@ -27,7 +27,7 @@
       /* 设置头部底部的内边距 */
       transition: all 0.3s ease;
       /* 为悬停效果添加过渡效果 */
-      color: white;
+      color: red;
       /* 文本白色显示 */
       font-size: 36px;
       /* 增加字体大小 */
